--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "files.associations": {
-        "netdb.h": "c"
+        "netdb.h": "c",
+        "sqlite3.h": "c",
+        "stdint.h": "c",
+        "inet.h": "c",
+        "pthread.h": "c",
+        "select.h": "c"
     }
 }
